<resources>
    <string name="app_name">Funding4</string>
    <string name="title_activity_home">Funding4</string>
    <string name="title_home">Home</string>
    <string name="title_funding">Funding</string>
    <string name="title_place">Places</string>
    <string name="title_menu">Menu</string>
    <string name="home_recommend_fund">Recommend</string>
    <string name="home_popular_fund">Popular Funding</string>
    <string name="home_near_by_place">Near By</string>

    <string name="password_reset_title">Reset Password</string>
    <string name="password_reset_description">
        Please enter your registered E-mail.\nWe will send you the password reset\nlink to your E-mail.
    </string>
    <string name="password_reset_confirm_title">Check your E-mail</string>
    <string name="password_reset_confirm_description">We have sent a link to change your\npassword to your email.</string>
    <string name="app_slogan">Funding Your Tourism.</string>
    <string name="filter_recommend">Recommend</string>
    <string name="filter_latest">Latest</string>
    <string name="filter_closing_limit">Closing Limit</string>
    <string name="filter_popular">Popularity</string>
    <string name="filter_funding_amount">Funding Amount</string>
    <string name="filter">Filter</string>
    <string name="place_search">Place Search</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_register_ppe">Please rate each item on the Personal Protective Equipment (PPE).</string>
    <string name="ppe_hand_sanitizer">Hand Sanitizer</string>
    <string name="ppe_person_hygiene">Person Hygiene</string>
    <string name="ppe_temp_check">Temperature Check</string>
    <string name="ppe_description">Check this place\'s PPE Rating. The higher the score, the higher the level of quarantine, the safer it is.</string>
    <string name="review_notice">Please leave a review of this place and rate it. It can be useful information for other users.</string>
    <string name="comment_notice">Please leave a comment of this funding. Free exchange of opinions, cheering phrases, etc. are all good.</string>
    <string name="caution_funding">- It may be cancelled depending on the seller\'s situation.\n\n- It\'s hard to get a refund for a simple change of course.\n\n- You should take the final responsibility for the funding.</string>
</resources>