<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".navigation.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/app_logo" />

            </RelativeLayout>

            <!--            <androidx.viewpager.widget.ViewPager-->
            <!--                android:id="@+id/main_funding_viewpager"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="250dp"-->
            <!--                android:background="@color/title" />-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/main_funding_image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imac" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_alignBottom="@+id/main_funding_image">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginBottom="16dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/main_funding_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Funding Title"
                            android:textColor="#FFFFFF"
                            android:textSize="32sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/main_funding_summary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="This funding is for you."
                            android:textColor="#B7FFFFFF"
                            android:textSize="16sp" />

                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/home_recommend_fund"
                android:textColor="@color/title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/recommend_funding_recyclerview_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/home_popular_fund"
                android:textColor="@color/title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/home_near_by_place"
                android:textColor="@color/title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.gms.maps.MapView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="50dp"
                android:id="@+id/home_near_by_map"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>